--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.www.funone">
 
+    itm3-88f7-qkd5
+
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -11,12 +13,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         //Facebook Log IN Integration
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/test_facebook_app_id" />
-
 
         <activity
             android:name=".activities.MainActivity"
@@ -24,9 +24,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.LogInActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.SocialLoginActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -36,7 +34,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity
+            android:name=".activities.SearchActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
