--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,12 +11,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         //Facebook Log IN Integration
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/test_facebook_app_id" />
-
 
         <activity
             android:name=".activities.MainActivity"
@@ -24,9 +22,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.LogInActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity
             android:name=".activities.SocialLoginActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -36,7 +32,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity android:name=".activities.SettingsActivity"></activity>
     </application>
 
 </manifest>
