--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,8 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:[4,5)'
     compile 'com.google.android.gms:play-services-auth:9.0.2'
     compile 'com.android.support:support-v4:23.4.0'
+
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+
+    compile 'de.hdodenhof:circleimageview:2.0.0'
 }
