--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.www.funone">
 
-
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
@@ -12,12 +11,10 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         //Facebook Log IN Integration
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/test_facebook_app_id" />
-
 
         <activity
             android:name=".activities.MainActivity"
@@ -38,7 +35,10 @@
         <activity
             android:name=".activities.SearchActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activities.SettingsActivity"
+        <activity
+            android:name=".activities.SettingsActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activities.AllCommentActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
