--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,6 +44,7 @@
         <activity
             android:name=".activities.HashTagContentActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activities.BestCommentsActivity"></activity>
     </application>
 
 </manifest>
