--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.SocialLoginActivity"
+            android:noHistory="true"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -44,7 +45,9 @@
         <activity
             android:name=".activities.HashTagContentActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".activities.BestCommentsActivity"></activity>
+        <activity
+            android:name=".activities.BestCommentsActivity"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
