--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,6 @@ dependencies {
     compile 'de.hdodenhof:circleimageview:2.0.0'
     compile 'com.android.support:cardview-v7:24.0.0'
     compile 'com.android.support:recyclerview-v7:24.0.0'
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.4'
+
 }
