--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.www.funone">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
 
     <application
         android:name=".CoreApp"
@@ -11,10 +13,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        //Facebook Log IN Integration
-        <meta-data
-            android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/test_facebook_app_id" />
+
+
 
         <activity
             android:name=".activities.MainActivity"
@@ -25,7 +25,6 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activities.SocialLoginActivity"
-            android:noHistory="true"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -48,6 +47,19 @@
         <activity
             android:name=".activities.BestCommentsActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+
+        //Facebook Log IN
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/dev_facebook_app_id" />
+
+        <activity
+            android:name="com.facebook.FacebookActivity"
+            android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
+            android:label="@string/app_name"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        //----------------------------
+
     </application>
 
 </manifest>
