--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,10 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
     <application
         android:name=".CoreApp"
         android:allowBackup="true"
@@ -37,6 +41,10 @@
         <activity
             android:name=".activities.BestCommentsActivity"
             android:theme="@style/AppTheme.NoActionBar" />
+
+        <activity android:name=".activities.CameraActivity"
+            android:theme="@style/AppTheme.NoActionBar"/>
+
         <activity
             android:name=".activities.SplashActivity"
             android:theme="@style/AppTheme.NoActionBar">
@@ -46,6 +54,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+
+
         //Facebook Log IN
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
@@ -57,7 +68,6 @@
             android:label="@string/app_name"
             android:theme="@android:style/Theme.Translucent.NoTitleBar" />
         //----------------------------
-
     </application>
 
 </manifest>
