--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,8 +6,10 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <uses-permission android:name="android.permission.CAMERA" />
+
     <uses-feature android:name="android.hardware.camera" />
     <uses-feature android:name="android.hardware.camera.autofocus" />
+    <uses-feature android:name="android.hardware.camera.front" />
 
     <application
         android:name=".CoreApp"
@@ -42,8 +44,10 @@
             android:name=".activities.BestCommentsActivity"
             android:theme="@style/AppTheme.NoActionBar" />
 
-        <activity android:name=".activities.CameraActivity"
-            android:theme="@style/AppTheme.NoActionBar"/>
+        <activity
+            android:name=".camera.CameraActivity"
+            android:theme="@style/AppTheme.NoActionBar"
+            android:screenOrientation="portrait"/>
 
         <activity
             android:name=".activities.SplashActivity"
@@ -54,7 +58,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
 
 
         //Facebook Log IN
